# dla

./: .gitignore  CITATION.cff  Cargo.toml  README.md  benchmark_analysis.ipynb  build.rs  config.ini
data/: g_radii_nmin100_nmax5000000.csv  tree_n100000_dmax90_seed0_iseed0.csv  tree_n100_dmax90_seed0_iseed0.csv
py/: plot_tree.py  time_analysis.ipynb
src/: ini_parser.rs  main.rs  sim.rs
src/sim/: csv_writer.rs  writer.rs
