[package]
name = "dla"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# inline-python = "0.7.1"
# libmath = "0.2.1"
configparser = "2.1.0"
ndarray = "0.15.3"
# csv = "1.1.6"
# itertools = "0.10.1"
# rayon = "1.5.1"