[package]
name = "dla"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# inline-python = "0.7.1" # Plot python graphs in rust
libmath = "0.2.1" # Using its floor function 
configparser = "2.1.0" # Parse config.ini files
ndarray = "0.15.3" # n-dimensional arrays
csv = "1.1.6" # Write to csv
itertools = "0.10.1" # Itertools, similar to in python
rayon = "1.5.1" # Parallelisation
kurbo = "0.8.1" # Quadratic equation solver
hashbrown = "0.11.2" # Optimised hashmaps